--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Cocktails#show</h1>
-<p>Find me in app/views/cocktails/show.html.erb</p>
+<%= render "shared/banner", cocktail: @cocktail %>
+
+<div class="container" id="ingredients">
+  <div class="box">
+    <h3 class="text-center">Ingredients</h3>
+    <ul>
+      <% @doses.each do |dose| %>
+        <li><%= dose.description %> of <%= dose.ingredient.name %></li>
+      <% end %>
+    </ul>
+  </div>
+
+  <div class="box">
+    <h3 class="text-center">Add ingredient</h3>
+    <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.input :description %>
+      <%= f.association :ingredient %>
+      <%= f.submit "Save", class: "btn-block btn-primary" %>
+    <% end %>
+  </div>
+</div>
+
+
+<%= link_to 'Back', cocktails_path %>
