--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,12 @@
   </head>
 
   <body>
-    <%= yield %>
+      <%= render "shared/navbar" %>
+      <div class="container-fluid">
+        <%= yield %>
+      </div>
 
-    <%= javascript_include_tag "application" %>
-    <%= javascript_pack_tag "application" %>
+      <%= javascript_include_tag "application" %>
+      <%= javascript_pack_tag "application" %>
   </body>
 </html>
