added logo to navabar, fixed boxes position, added delete on doses list, beautified show page

--- a/app/assets/stylesheets/pages/_cocktail.scss
+++ b/app/assets/stylesheets/pages/_cocktail.scss
@@ -1,8 +1,61 @@
-#ingredients {
-  position: absolute;
-  left: 10vw;
-  top: 50vh;
+#doses-control {
+  margin-top: -72px;
+
+  ul {
+    list-style: none;
+    padding: 0;
+  }
 }
-#ingredients ul {
-  list-style: none;
+
+.dose-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 32px;
+  border-radius: 16px;
+  margin: 2px 0;
+  padding: 0 10px 0 15px;
+  background-color: rgba(0, 0, 0, 0);
+
+  transition: background-color .15s linear ;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, .05);
+    a {
+      opacity: 0.8;
+    }
+  }
+
+  a {
+    display: inline-block;
+    height: 20px;
+    opacity: 0;
+
+    transition: opacity .15s linear ;
+    // transform: translateY(2px);
+
+    .delete-cross {
+      display: block;
+      width: 20px;
+    }
+  }
 }
+
+.dose-form {
+  padding-left: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
