--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,18 +1,23 @@
 <%= render "shared/banner", cocktail: @cocktail %>
 
-<div class="container" id="ingredients">
+<div class="container" id="doses-control">
   <div class="box">
     <h3 class="text-center">Ingredients</h3>
     <ul>
       <% @doses.each do |dose| %>
-        <li><%= dose.description %> of <%= dose.ingredient.name %></li>
+        <li class="dose-item">
+          <div class="text">
+            <%= dose.description %> of <%= dose.ingredient.name %>
+          </div>
+          <%= link_to image_tag("cross.png", class:"delete-cross"), dose, method: :delete %>
+        </li>
       <% end %>
     </ul>
   </div>
 
   <div class="box">
     <h3 class="text-center">Add ingredient</h3>
-    <%= simple_form_for [@cocktail, @dose] do |f| %>
+    <%= simple_form_for [@cocktail, @dose], class:"dose-form" do |f| %>
       <%= f.input :description %>
       <%= f.association :ingredient %>
       <%= f.submit "Save", class: "btn-block btn-primary" %>
