--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-<!--   <div class="navbar-wagon-brand"> -->
-    <%= link_to cocktails_path, class:"navbar-wagon-brand" do %>
-      <%= image_tag("logo.png")  %>
-    <% end %>
-<!--   </div> -->
+  <%= link_to image_tag("logo.png"), cocktails_path, class:"navbar-wagon-brand" %>
+
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
