--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,13 +1,15 @@
 /* Main navbar */
 .navbar-wagon {
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
-  transition: all 0.3s ease;
-  height: 70px;
-  padding: 0px 30px;
+  position: fixed;
+  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 70px;
+  width: 100vw;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  padding: 0px 30px;
+  background: white;
 }
 
 /* Logo */
@@ -39,7 +41,20 @@
 /* Navbar link */
 .navbar-wagon-link {
   color: #616668;
-  font-size: 14px;
+  font-size: 16px;
+  font-family: $headers-font;
+  &.btn {
+    display: inline-block;
+    background-color: $red;
+    color: white;
+    border-radius: 4px;
+    padding: 5px 20px;
+    transition: background-color .2s linear;
+    &:hover {
+      color: white;
+      background-color: darken($red, 10%);
+    }
+  }
 }
 .navbar-wagon-link:hover {
   color: #da552f;
