--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,7 +1,7 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #af263d;
+$red: rgb(237, 40, 85);
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
