removed link to images

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,7 +5,7 @@
       <div class="col-xs-12 col-sm-4">
         <div class="card">
           <%= link_to '', cocktail, class: "card-link" %>
-          <div class="card-background" style="background-image: linear-gradient(rgba(60,0,0,0.25), rgba(60,0,0,0.15)),url('<%= image_path("cocktail-#{cocktail.id}.jpeg") %>');"></div>
+          <div class="card-background"></div>
           <div class="card-description">
             <h2 class="text-center"><%= cocktail.name %></h2>
           </div>
