--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,3 @@
-<%= cl_image_tag("THE_IMAGE_ID_FROM_LIBRARY",
-      width: 400, height: 300, crop: :fill) %>
-<%= cl_image_tag("IMAGE_WITH_FACE_ID",
-      width: 150, height: 150, crop: :thumb, gravity: :face) %>
-
 <div class="container">
   <div class="row">
     <!-- insert <div class="card"> -->
@@ -10,13 +5,13 @@
       <div class="col-xs-12 col-sm-4">
         <div class="card">
           <%= link_to '', cocktail, class: "card-link" %>
-          <div class="card-background"></div>
+          <div class="card-background" style="background-image: linear-gradient(rgba(60,0,0,0.25), rgba(60,0,0,0.15)), url('<%= cl_image_path cocktail.photo %>');"></div>
           <div class="card-description">
             <h2 class="text-center"><%= cocktail.name %></h2>
           </div>
         </div>
       </div>
       <% end %>
-    </div>
   </div>
+</div>
 
