--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -16,11 +16,11 @@
   </div>
 
   <div class="box">
-    <h3 class="text-center">Add ingredient</h3>
+    <h3 class="text-center">Add ingredients</h3>
     <%= simple_form_for [@cocktail, @dose], class:"dose-form" do |f| %>
       <%= f.input :description %>
       <%= f.association :ingredient %>
-      <%= f.submit "Save", class: "btn-block btn-primary" %>
+      <%= f.submit "Save", class: "btn-block btn-danger" %>
     <% end %>
   </div>
 </div>
