--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="banner">
+<div class="banner" style="background-image: linear-gradient(rgba(60,0,0,0.25), rgba(60,0,0,0.15)), url('<%= cl_image_path cocktail.photo %>')">
   <div class="banner-content">
     <h1><%= cocktail.name %></h1>
   </div>
