added search bar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-
+    <%= render "shared/search" %>
     <%= link_to new_cocktail_path, class: "navbar-wagon-item navbar-wagon-link btn" do %>
       <i class="fa fa-plus"></i>
       &nbsp;Add a Recipe
